--- a/platformio.ini
+++ b/platformio.ini
@@ -1,36 +1,25 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32]
 platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-	adafruit/Adafruit NeoPixel@^1.7.0
+	adafruit/Adafruit NeoPixel@^1.12.0
+	adafruit/Adafruit NeoMatrix@^1.3.2
 	dmadison/FastLED NeoPixel@^1.0.3
-	fastled/FastLED@^3.5.0
+	fastled/FastLED@^3.6.0
 build_flags = 
-	-D SR_DMTYPE=1
-	-D I2S_SDPIN=-1
-	-D I2S_WSPIN=-1
-	-D I2S_CKPIN=-1
-	-D SR_SQUELCH=10
-	-D SR_GAIN=30
-	-D RLYPIN=15
-	-D BTNPIN=0
+	-D RLYPIN=33
+	-D BTNPIN=34
 	-D IRPIN=-1
-	-D PIXEL_COUNTS="303,302,303,275"
-	-D DATA_PINS="16,3,1,4"
-	-D DEFAULT_LED_COUNT=303
+	-D PIXEL_COUNTS="165,165,165,165,165,165,193,0"
+	-D DATA_PINS="0,1,2,3,4,5,12,13"
+	-D DEFAULT_LED_COUNT=1183
 	-D ABL_MILLIAMPS_DEFAULT=1250
-monitor_speed = 9600
+	;-D configMINIMAL_STACK_SIZE=1024
+;build_type = debug
+;monitor_filters = esp32_exception_decoder
+monitor_speed = 115200
+;upload_speed = 460800
 
 [platformio]
-src_dir = CycleOfLight
+src_dir = cycle_of_light
